# pytorch_training

./: hoge.ipynb  pyproject.toml  sample.ipynb
